Purple: simplify reportGermlineDeletion in GermlineDeletions.